--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8XM9EN9XL6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8XM9EN9XL6');
+</script>
+
 </head>
 <body>
     <!-- Cursor Follower -->
@@ -19,7 +30,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="logo">
-                <img src="images/Lupo_Consulting_Legacy_Blue" alt="Lupo Consulting">
+                <img src="images/Lupo_Consulting_Legacy_Black.png" alt="Lupo Consulting">
             </div>
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
@@ -367,7 +378,7 @@
         <div class="footer-container">
             <div class="footer-main">
                 <div class="footer-brand">
-                    <img src="images/Lupo_Consulting_Legacy_Blue.png" alt="Lupo Consulting" class="footer-logo">
+                    <img src="images/Lupo_Consulting_Legacy_Black.png" alt="Lupo Consulting" class="footer-logo">
                     <p>Expert consulting for SaaS growth</p>
                 </div>
 
