--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
             </div>
         </div>
     </footer>
-
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
